testsuite/tests/checks/outer_loop_exits/test.out
loops.adb:8:13: error: exit out of the nesting loop
8 |             exit Outer;                     --  FLAG
  |             ^^^^^^^^^^^ 

